<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">台湾研讨会</string>
    <string name="menu_settings">Settings</string>
    <string name="qr_scan">二维码扫描</string>
    <string name="scan_hint">将二维码图案放在取景框内</string>
    <string name="scan_error">扫描失败，请重试</string>
    <string name="default_message">...</string>
    <string name="entry_schedule">个人日程</string>
    <string name="entry_message">消息中心</string>
    <string name="entry_report">会议报告</string>
    <string name="entry_survey">问卷调查</string>
    <string name="entry_map">地图信息</string>
    <string name="entry_scenery">景点介绍</string>
    <string name="message_center">消息中心</string>
    <string name="mark_message_read_failed">标记消息已读失败</string>
    <string name="sync_data_failed">同步数据失败</string>
    <string name="login_failed_caused_by_network">您的网络可能不通畅，导致登录失败</string>
    <string name="login_failed">登录失败</string>
    <string name="login">登录</string>
    <string name="no_network">好像没有网络哦\n请保持网络畅通</string>
    <string name="confirm_logout">确认退出?</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>

    <!-- welcome -->
    <string name="amy_china">安利（中国）</string>
    <string name="conference_name">营销菁英进修研讨会</string>
    <string name="login_by_id">会议顺序号登录</string>

    <!-- login -->
    <string name="name">姓名</string>
    <string name="input_id">请输入会议顺序号</string>
    
    <!-- date -->
    <string-array name="day_of_week">
        <item>星期日</item>
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
    </string-array>
    
    <!-- message -->
    <string name="no_message">暂无消息</string>
    <string name="amway_new_message">您有%1$d条新消息</string>
    
    <!-- sidebar -->
    <string name="exit_login">退出登录</string>
    <string name="sidebar_new_message">(%1$d)</string>

    <!-- schedule -->
    <string name="meeting_order">会议顺序号：</string>
    <string name="today">今天</string>
    <string name="warmtips">温馨提示</string>
    <string name="warmtips_format">&#8226;    %1$s</string>
    <string name="schedule_date_format">%1$s-%2$s</string>
    <string name="no_schedule">暂无日程</string>
    <string name="date_location">2013 台湾</string>
</resources>