<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="342dp"
        android:background="@drawable/banner_taipei_landscape_2"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp" >

        <ImageView
            android:id="@+id/amy_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/amy_logo" />

        <TextView
            android:id="@+id/amy_china"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/amy_logo"
            android:layout_alignParentRight="true"
            android:layout_marginTop="6dip"
            android:text="@string/amy_china"
            android:textColor="@color/schedule_header_color_1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/conference_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/amy_china"
            android:layout_alignParentRight="true"
            android:layout_marginTop="2dip"
            android:text="@string/conference_name"
            android:textColor="@color/schedule_header_color_1"
            android:textSize="20sp" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/conference_name"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dip"
            android:text="@string/date_location"
            android:textColor="@color/schedule_header_color_2"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_id"
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="18dp"
            android:background="@drawable/inputbar"
            android:hint="@string/input_id"
            android:padding="12dp"
            android:singleLine="true"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:layout_above="@id/input_id"
            android:layout_alignParentRight="true"
            android:background="@drawable/inputbar"
            android:hint="@string/name"
            android:layout_marginBottom="8dp"
            android:padding="12dp"
            android:singleLine="true"
            android:textColor="@android:color/darker_gray" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:background="@drawable/background" >

        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:background="@drawable/button_red"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:background="@drawable/button_red_shadow" />
    </RelativeLayout>

</LinearLayout>