<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/animation_layout_sidebar"
    android:layout_width="290dp"
    android:layout_height="fill_parent"
    android:background="@drawable/sidebar_bg"
    android:paddingTop="5dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="6" >

        <FrameLayout
            android:id="@id/schedule_item"
            style="@style/sidebar_item_frame"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/sidebar_green" >

            <Button
                android:id="@+id/entry_schedule"
                style="@style/sidebar_item"
                android:drawableLeft="@drawable/sidebar_icon_schedule"
                android:text="@string/entry_schedule" />
        </FrameLayout>

        <RelativeLayout
            android:id="@id/message_item"
            style="@style/sidebar_item_frame"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/sidebar_blue" >

            <Button
                android:id="@+id/entry_message"
                style="@style/sidebar_item"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:paddingRight="16dp"
                android:drawableLeft="@drawable/sidebar_icon_message"
                android:text="@string/entry_message" />

            <TextView 
                android:id="@+id/new_message"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/entry_message"
                android:layout_marginLeft="-20dip"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="18sp" 
                android:visibility="gone"/>
        </RelativeLayout>

        <FrameLayout
            android:id="@id/map_item"
            style="@style/sidebar_item_frame"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/sidebar_red" >

            <Button
                android:id="@+id/entry_map"
                style="@style/sidebar_item"
                android:drawableLeft="@drawable/sidebar_icon_map"
                android:text="@string/entry_map" />
        </FrameLayout>

        <FrameLayout
            android:id="@id/scenery_item"
            style="@style/sidebar_item_frame"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/sidebar_blueness" >

            <Button
                android:id="@+id/entry_scenery"
                style="@style/sidebar_item"
                android:drawableLeft="@drawable/sidebar_icon_scenery"
                android:text="@string/entry_scenery" />
        </FrameLayout>

         <FrameLayout
            android:id="@id/survey_item"
            style="@style/sidebar_item_frame"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/sidebar_yellow" >

            <Button
                android:id="@+id/entry_survey"
                style="@style/sidebar_item"
                android:drawableLeft="@drawable/sidebar_icon_survey"
                android:text="@string/entry_survey" />
        </FrameLayout>
        
         <FrameLayout
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
             <Button
                 android:id="@+id/exit_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="18dp"
                 android:layout_gravity="center_vertical|right"
                 android:background="@null"
                 android:drawableLeft="@drawable/icon_exit"
                 android:text="@string/exit_login"
                 android:textColor="@android:color/darker_gray"
                 android:textSize="18sp" />
         </FrameLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:src="@drawable/sidebar_shadow_mask" />

</RelativeLayout>