<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".WelcomeActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/banner_taipei_landscape"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp"
        android:gravity="right" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/amy_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:text="@string/amy_china"
            android:textColor="@color/schedule_header_color_1"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:text="@string/conference_name"
            android:textColor="@color/schedule_header_color_1"
            android:textSize="20sp" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/date_location"
            android:textColor="@color/schedule_header_color_2"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <!-- <Button
            android:id="@+id/scan_entry"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@drawable/button_red"
            android:text="@string/qr_scan"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_red_shadow" /> -->

        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@drawable/button_red"
            android:text="@string/login_by_id"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_red_shadow" />

    </LinearLayout>
</LinearLayout>